remove unnecessary compiler argument